Changes to footer and header. Also changed favicon

--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,33 @@
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.Main {
+  background-color: #ececec;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+footer {
+  margin-top: auto;
+  display: block;
+  text-align: center;
+}
+
+footer a {
+  text-decoration: none;
   color: white;
 }
 
-.Main {
-  background-color: #ececec;
+.Link {
+  border-bottom: medium solid #C3AD54;
+  color: white;
+}
+
+footer a:hover{
+  border-color: #2F5065;
+}
+
+header .Link:hover {
+  border-color: #000045;
+  transform: scale(1.1); 
 }
 
 /* ==================Colors */
@@ -73,22 +84,20 @@
     font-weight: 500;
   }
 
-  label {
+  label, input, select {
     font-size: 20px;
     font-weight: 500;
   }
-
-  input {
-    font-size: 20px;
-    font-weight: 500;
-  }
+  
   /* END GENERAL =================== */
 
   /* HOME PAGE */
   .BioSection {
     display: flex;
     align-items: center;
-    text-align: left  ;
+    text-align: left;
+    justify-content:space-around;
+    margin-top: auto;
   }
 
   .BioArticle {
@@ -111,7 +120,6 @@
   }
 
   .BioImg {
-    justify-content: right;
     margin-left: 80px;
     width: 20%;
   }
@@ -144,7 +152,7 @@
 
   .ContactForm textarea {
     width: auto;
-    height: 30px;
+    height: 150px;
     border-radius: 5px;
     margin: 5px 0px;
     resize: vertical;
@@ -181,6 +189,23 @@
     font-size: 40px;
   }
   /* END PRIVACY PAGE ======================*/
+
+  /* HEADER & FOOTER ======================*/
+
+  header .Link{
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    font-weight: 500;
+    margin-right: 20px;
+    margin-bottom: 10px;
+  }
+
+  .Logo {
+    max-width: 5%;
+    margin: 20px 20px 0px 25px;
+  }
+/* END HEADER & FOOTER ======================*/
 }
 
 /* ==================END of Responsive */
